# cyfs-ndn

./: MERGE_SUMMARY.md
doc/: CYFS Protocol.md  CYFS 标准对象.md  CYFS协议 对 AI-Native 下一代互联网的结构性改变  CYFS协议现有标准对象.md  NamedMgr_Arch_v2_Overlay_InodeDentry.md  content network.md  demo_dir.json  fs_meta_db.md  http-ndm-protocol.md  link to local.md  named-data-http-store-protocol.md  named-mgr-zone-gateway-protocol.md  named_data_mgrv2.1.rs  named_mgr.md  named_mgr.py  named_mgr.rs  named_mgrv2.md  named_store_gc.md  ndm_gateway.md  ndm_gc.md  ndm_v2核心功能性能分析.md  ndm_v2核心设计与性能分析.md  ndm_zone_gateway_structured_api.md  ndn_dir_router 需求.md  new discuss.md  packed_obj_pipline.md  test case.md  test case.prompt.md  可计算的 Content Network.md
doc/CYFS Protocol/: CYFS Protocol.md  CYFS 标准对象.md  Content Network.md
doc/GC/: ndm_gc.md
doc/NDM Protocol/: named-mgr-zone-gateway-protocol.md  overview.md  readme.txt  store-mgr-zone-gateway-structured-api.md
doc/Reviews/: layout_select.md  meta_resolve_path.md  named_data_mgrv2.1.rs  named_mgr discuss.md  v2review.md  协议文档修改意见.md
src/: Cargo.toml  start.sh
src/cyfs-lib/src/: fsmeta_client.rs
src/cyfs/src/: lib.rs  named_file_mgr.rs
src/fs_buffer/: Cargo.toml  readme.md
src/fs_buffer/src/: buffer_db.rs  fb_client.rs  fb_service.rs  lib.rs  local_filebuffer.rs
src/fs_daemon/: Cargo.toml  fuse_behavior.md  readme.md  testcase.md
src/fs_daemon/src/: fs_daemon.rs  fs_daemon_tests.rs  main.rs
src/fs_daemon/tests/: fuse_cli_e2e.sh  fuse_ops_verify.sh
src/fs_meta/: Cargo.toml
src/fs_meta/src/: background.rs  fs_meta_service.rs  fs_meta_service_tests.rs  lib.rs  list_cache.rs  main.rs  path_resolve_cache.rs
src/named_store/: Cargo.toml
src/named_store/examples/: ndm_zone_gateway_server.rs
src/named_store/src/: backend.rs  chunk_list_reader.rs  diff_chunk_list.rs  gc_types.rs  http_backend.rs  http_gc_client.rs  lib.rs  limit_reader.rs  local_fs_backend.rs  local_store.rs  named_store.rs  ndm.rs  ndm_node_gateway.rs  ndm_zone_gateway.rs  outbox_sender.rs  store_db.rs  store_http_gateway.rs  store_layout.rs  store_mgr.rs  test_gc.rs  test_http_backend_mgr.rs  test_http_roundtrip.rs  test_store_init.rs  test_store_mgr.rs
src/ndm/: Cargo.toml
src/ndm ref/: Cargo.toml
src/ndm ref/src/: fsmeta.rs  named_mgr.rs  named_store.rs
src/ndm-lib/: Cargo.toml
src/ndm-lib/src/: fsmeta_client.rs
src/ndm/src/: fsmeta_client.rs  lib.rs  named_mgr.rs  reader.rs  store_layout.rs
src/ndn-lib/: Cargo.toml
src/ndn-lib/old_tests/: local_signal_ndn_mgr_dir_obj_map.rs
src/ndn-lib/src/: action_obj.rs  base_content.rs  cyfs_http.rs  dirobj.rs  example.rs  fileobj.rs  fs_meta_db.rs  hash.rs  lib.rs  link_obj.rs  msgobj.rs  ndn_client.rs  object.rs  packed_obj_pipline.rs  relation_obj.rs  simple_object_map.rs  tools.rs
src/ndn-lib/src/chunk/: chunk.rs  chunk_list.rs  chunk_list_reader.rs  hasher.rs  mod.rs  simple_chunk_list.rs  test.rs
src/ndn-lib/src/named_data/: def.rs  fs_meta_db.rs  mod.rs  named_data_db.rs  named_data_mgr.rs  named_data_mgr_db.rs  named_data_store.rs  test_mgr.rs  test_store.rs
src/ndn-lib/src/object_array/: object_array.rs
src/ndn-lib/src/object_map/: README.md  mod.rs  simple_object_map.rs
src/ndn-lib/src/object_map/file/: db_storage.rs  json_storage.rs  memory_storage.rs
src/ndn-lib/src/trie_object_map/: builder.rs  inner_storage.rs  object_map.rs  storage.rs
src/ndn-lib/src/trie_object_map/file/: sqlite_storage.rs
src/ndn-toolkit/: Cargo.toml
src/ndn-toolkit/src/: cyfs_ndn_client.rs  cyfs_ndn_dir_server.rs  cyfs_tests.rs  lib.rs  ndm_client.rs  ndm_tests.rs  ndn_client.rs  test.rs  tools.rs
src/package-lib/: Cargo.toml  build.rs
src/package-lib/src/: env.rs  error.rs  lib.rs  meta.rs  meta_index_db.rs  package_id.rs
src/rootfs/etc/: fs_daemon.json  store_layout.json
src/tests/: run_ndm_zone_gateway_test.ts
