[package]
name = "fs_daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { workspace = true }
tokio = { workspace = true }
buckyos-kit = {workspace = true}
fuser = "0.14"
libc = "0.2"
env_logger = "0.11"
ndm = { path = "../ndm" }
ndn-lib = { path = "../ndn-lib" }
fs_meta = { path = "../fs_meta" }
fs-buffer = { path = "../fs_buffer" }
named_store = { path = "../named_store" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
