[package]
name = "fs_meta"
version = "0.5.1"
edition = "2021"
publish = false

[dependencies]
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
krpc = { workspace = true }
rusqlite = { workspace = true }
ndn-lib = { path = "../ndn-lib" }
fs-buffer = { path = "../fs_buffer" }
named_store = { path = "../named_store" }
ndm ={ path = "../ndm" }

[dev-dependencies]
tempfile = "3"
