[package]
name = "named_store"
version = "0.5.1"
edition = "2021"

[dependencies]
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
rusqlite = { workspace = true }
fs2 = "*"
once_cell = "*"
ndn-lib = { path = "../ndn-lib" }

[dev-dependencies]
tempfile = "3"

