[package]
name = "package-lib"
version = "0.4.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
fs_extra = "*"
futures-util = { workspace = true }
futures = { workspace = true }
regex = "*"
async-recursion = "*"
version-compare = "*"
semver = "*"
toml = "*"
chrono = { workspace = true }
serde = { workspace = true }
serde_derive = "*"
serde_json = { workspace = true }
simplelog = "*"
dirs = "*"
async-trait = { workspace = true }
tempfile = { workspace = true }
time = "*"
warp = "*"
sha2 = "*"
rusqlite = { workspace = true }
async-fd-lock = "*"
async-compression = { version = "0.4", features = ["tokio", "gzip"] }
tokio-tar = "*"
ndn-lib = { path = "../ndn-lib" }
name-lib = { workspace = true }
buckyos-kit = { workspace = true }
[dev-dependencies]
tempfile = { workspace = true }
